<resources>
    <string name="app_name">material-components-demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">favorite</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="delete">delete</string>
    <string name="content_description_delete">content_description_delete</string>
    <string name="content_description_more">content_description_more</string>
    <string name="more">more</string>
    <string name="toggle_action_bar">Toggle Action Bar</string>
    <string name="cat_bottomsheet_button_text">Show Modal BottomSheetDialog</string>
    <string name="cat_carts_button_text">Show rich media fragment</string>
    <string name="cat_carousel_button_text">Show carousel hero fragment</string>
    <string name="cat_checkbox_button_text">Show checkbox fragment</string>
    <string name="cat_chip_button_text">Show chip fragment</string>
    <string name="cat_color_button_text">Show color fragment</string>
    <string name="cat_adaptive_button_text">Show adaptive fragment</string>
    <string name="cat_date_picker_button_text">Show Date Picker fragment</string>
    <string name="cat_dialog_button_text">Show Dialog fragment</string>
    <string name="cat_divider_button_text">Show Divider fragment</string>
    <string name="cat_floating_toolbar_button_text">Show Floating Toolbar fragment</string>
    <string name="cat_loading_indicator_button_text">Show Loading Indicator fragment</string>
    <string name="cat_theme_button_text">Show Theme Switch fragment</string>
    <string name="cat_bottomsheet_title">Bottom Sheet</string>
    <string name="cat_bottomsheet_button_clicked">Button clicked</string>
    <string name="cat_bottomsheet_button_label_enabled">Enabled</string>
    <string name="cat_bottomsheet_button_label_disabled">Disabled</string>
    <string name="cat_bottomsheet_state_collapsed" translatable="false">STATE_COLLAPSED</string>
    <string name="cat_bottomsheet_state_expanded" translatable="false">STATE_EXPANDED</string>
    <string name="cat_bottomsheet_state_dragging" translatable="false">STATE_DRAGGING</string>
    <string name="cat_bottomsheet_state_half_expanded" translatable="false">STATE_EXPANDED</string>
    <string name="cat_bottomsheet_textfield_label" description="The label for the bottom sheet text field. [CHAR_LIMIT=100]">Label</string>
    <string name="cat_card_select">Select a state</string>
    <string name="cat_card_selectable_content">
    Lorem ipsum dolor sit amet, nec no nominavi scaevola. Per et sint sapientem, nobis perpetua salutandi mei te. Quo tamquam probatus reprehendunt in. Eos esse purto eruditi ea. Enim tation persius ut sea, eos ad consul populo.
    Ne eum solet altera. Cibo eligendi et est, electram theophrastus te vel eu.
  </string>
    <string name="cat_card_rich_media_demo">Rich Media Cards</string>
    <string name="cat_card_rich_media_sample_1">Sample #1</string>
    <string name="cat_card_rich_media_sample_2">Sample #2</string>
    <string name="cat_card_rich_media_sample_3">Sample #3</string>
    <string name="cat_card_rich_media_view_overline">Title goes here</string>
    <string name="cat_card_rich_media_view_title">Title goes here</string>
    <string name="cat_card_rich_media_view_subtitle">Subtitle goes here</string>
    <string name="cat_card_rich_media_view_secondary_line_text">Secondary line text Lorem ipsum dolor sit amet, nec no nominavi scaevola. Per et sint sapientem, nobis perpetua salutandi mei te.</string>
    <string name="cat_card_rich_media_logo_view_description">Card Logo</string>
    <string name="cat_card_rich_media_image_view_description">Card Image</string>
    <string name="cat_card_rich_media_rating_text">4.5 (413)</string>
    <string name="cat_card_rich_media_rating_view_description">Card Rating</string>
    <string name="cat_card_rich_media_chip_title_1">Item 1</string>
    <string name="cat_card_rich_media_chip_title_2">Item 2</string>
    <string name="cat_card_rich_media_chip_title_3">Item 3</string>
    <string name="cat_card_rich_media_chip_title_4">Item 4</string>
    <string name="cat_card_rich_media_action_1">Action 1</string>
    <string name="cat_card_rich_media_action_2">Action 2</string>
    <string name="cat_carousel_title" translatable="false">Carousel</string>
    <string name="cat_carousel_description" translatable="false">Carousels are stylized versions of lists that provide a unique viewing and behavior that suit large imagery and other visually rich content.</string>
    <string name="cat_carousel_multi_browse_demo_title" translatable="false">Multi-browse Carousel</string>
    <string name="cat_carousel_hero_demo_title" description="Name of the hero variant demo. [CHAR_LIMIT=NONE]">Hero Carousel</string>
    <string name="cat_carousel_fullscreen_demo_title" translatable="false">Fullscreen Carousel</string>
    <string name="cat_carousel_uncontained_demo_title" description="Name of the uncontained variant demo. [CHAR_LIMIT=NONE]">Uncontained Carousel</string>
    <string name="cat_carousel_multi_browse_title" translatable="false">Multi-browse</string>
    <string name="cat_carousel_multi_browse_desc" translatable="false">Multi-browse carousels allow quick browsing of many small items, like a photo thumbnail gallery.</string>
    <string name="cat_carousel_hero_title" description="Title of the hero variant demo. [CHAR_LIMIT=NONE]">Hero</string>
    <string name="cat_carousel_hero_desc" description="Description of the hero variant demo.[CHAR_LIMIT=NONE]">Hero carousels allow browsing with a focus on one main item at a time.</string>
    <string name="cat_carousel_fullscreen_title" description="Title of the fullscreen variant demo. [CHAR_LIMIT=NONE]">Fullscreen</string>
    <string name="cat_carousel_fullscreen_desc" description="Title of the fullscreen variant demo. [CHAR_LIMIT=NONE]">Fullscreen carousels allow browsing with a focus on one item at a time.</string>
    <string name="cat_carousel_uncontained_title" description="Title of the uncontained variant demo. [CHAR_LIMIT=NONE]">Uncontained</string>
    <string name="cat_carousel_uncontained_desc" description="Title of the uncontained variant demo. [CHAR_LIMIT=NONE]">Uncontained carousels show items at their original sizes, with items getting smaller as they reach the edges of the screen and are cut off in the direction they scroll.</string>
    <string name="cat_carousel_image_1_content_desc" translatable="false">A daisy at sunset</string>
    <string name="cat_carousel_image_2_content_desc" translatable="false">Portrait of a person with hair covering their face</string>
    <string name="cat_carousel_image_3_content_desc" translatable="false">Fungus on a tree</string>
    <string name="cat_carousel_image_4_content_desc" translatable="false">A train station in Japan</string>
    <string name="cat_carousel_image_5_content_desc" translatable="false">A beekeeper at work</string>
    <string name="cat_carousel_image_6_content_desc" translatable="false">A person hiking wearing a backpack</string>
    <string name="cat_carousel_image_7_content_desc" translatable="false">Three mushrooms growing on a log</string>
    <string name="cat_carousel_image_8_content_desc" translatable="false">Poke bowls</string>
    <string name="cat_carousel_image_9_content_desc" translatable="false">Bento box</string>
    <string name="cat_carousel_image_10_content_desc" translatable="false">White metal patio chairs</string>
  <string name="cat_floating_toolbar_title"
      description="Title for the screen that showcases demonstrative usages of the Floating Toolbar widget [CHAR LIMIT=NONE]">
    Floating Toolbar
  </string>
  <string name="cat_floating_toolbar_orientation"
      description="Title for the toggle button group that determines the orientation for the Floating Toolbar [CHAR LIMIT=NONE]">
    Floating Toolbar Orientation
  </string>
  <string name="cat_floating_toolbar_orientation_bottom"
      description="Text for a button that sets the Floating Toolbar to bottom orientation [CHAR LIMIT=NONE]">
    Bottom
  </string>
  <string name="cat_floating_toolbar_orientation_left"
      description="Text for a button that sets the Floating Toolbar to left orientation [CHAR LIMIT=NONE]">
    Left
  </string>
  <string name="cat_floating_toolbar_orientation_right"
      description="Text for a button that sets the Floating Toolbar to right orientation [CHAR LIMIT=NONE]">
    Right
  </string>
  <string name="cat_floating_toolbar_filler_text" translatable="false">
    \t\tLorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    \n\n\t\tSuspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.
    \n\n\t\tSed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.
    \n\n\t\tAenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.
    \n\n\t\tPhasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
  </string>
</resources>