<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true">
    <androidx.appcompat.widget.Toolbar
        style="?attr/catalogToolbarWithCloseButtonStyle"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/cat_floating_toolbar_title"/>
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/body_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="4dp"
          android:text="@string/cat_floating_toolbar_orientation"
          android:textAppearance="?attr/textAppearanceBody1" />

      <com.google.android.material.button.MaterialButtonToggleGroup
          android:id="@+id/toggle_group"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:selectionRequired="true"
          app:singleSelection="true">

        <Button
            android:id="@+id/bottom_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_floating_toolbar_orientation_bottom" />

        <Button
            android:id="@+id/left_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_floating_toolbar_orientation_left" />

        <Button
            android:id="@+id/right_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_floating_toolbar_orientation_right" />
      </com.google.android.material.button.MaterialButtonToggleGroup>

      <TextView
          android:id="@+id/body_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:lineSpacingMultiplier="1.2"
          android:text="@string/cat_floating_toolbar_filler_text" />

    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>