<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.material_components_demo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.material_components_demo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.material_components_demo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/catCardRichMediaDemoFragment"
        android:name="com.example.material_components_demo.ui.home.CatCardRichMediaDemoFragment"
        android:label="Cat Card Demo" />

    <fragment
        android:id="@+id/catCarouselHeroFragment"
        android:name="com.example.material_components_demo.ui.home.CatCarouselHeroFragment"
        android:label="Carousel Hero Demo" />

    <fragment
        android:id="@+id/catCheckboxFragment"
        android:name="com.example.material_components_demo.ui.home.CheckboxFragment"
        android:label="Checkbox Demo" />
</navigation>