<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/text_home"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_action_bar"
        android:textSize="16sp"
        app:icon="@drawable/ic_star_checkable_24" />

    <Button
        android:id="@+id/bottomsheet_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/cat_bottomsheet_button_text"/>

    <Button
        android:id="@+id/cards_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/cat_carts_button_text"/>

    <Button
        android:id="@+id/carousel_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/cat_carts_button_text"/>
</LinearLayout>